[gd_scene load_steps=3 format=2]

[ext_resource path="res://Attractions/TimeScrap/Timelines.gd" type="Script" id=1]
[ext_resource path="res://Attractions/TimeScrap/Assets/timelines_theme.tres" type="Theme" id=2]

[node name="Timelines" type="Node"]
script = ExtResource( 1 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimelineTabs" type="TabContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 13.0
margin_top = 13.0
margin_right = -13.0
margin_bottom = -13.0
tab_align = 0
drag_to_rearrange_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="+" type="Tabs" parent="UI/TimelineTabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 13.0
margin_top = 46.0
margin_right = -13.0
margin_bottom = -13.0

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -135.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="UI/HBoxContainer"]
margin_right = 64.0
margin_bottom = 34.0
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="Button" parent="UI/HBoxContainer"]
margin_left = 68.0
margin_right = 134.0
margin_bottom = 34.0
text = "Load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clear" type="Button" parent="UI/HBoxContainer"]
margin_left = 138.0
margin_right = 207.0
margin_bottom = 34.0
text = "Clear"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="UI/HBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="UI/HBoxContainer/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="UI/HBoxContainer/Clear" to="." method="_on_Clear_pressed"]
